# insight-fuse

./: .gitignore  CLAUDE.md  GMAIL_SETUP.md  README.md  docker-compose.yml  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  create_migration.py  pyproject.toml  requirements.txt  run.py  test_custom_site.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: gmail.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analyses.py  articles.py  custom_sites.py  fetch.py  summaries.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/models/: __init__.py  gmail_newsletter.py
backend/app/schemas/: analysis.py  article.py  custom_site.py  fetch.py  summary.py
backend/app/services/: custom_scraper.py  gmail_service.py  llm_service.py  news_fetcher.py  scheduler.py  site_analyzer.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/article/[id]/: page.tsx
frontend/app/custom-sites/: page.tsx
frontend/app/gmail/: page.tsx
frontend/components/: ArticleList.tsx  CustomSiteForm.tsx  FetchButton.tsx  GmailNewsletterForm.tsx  LanguageFilter.tsx  SourceFilter.tsx
